# school-add-project

./: Dockerfile  Makefile  README.md  data.py  pyproject.toml
.fleet/: run.json
school_project/: __init__.py  __main__.py  audio_analyzer.py  audio_cut_0.py  blackscr_detector.py  detection.py  mongo_test.py  output_container.py  packet_wrapper.py  scene_detector.py  scene_processor.py  scene_segmenter.py  segment_cutter.py  segment_extractor.py  segment_finder.py  segment_length_validator.py  simple_processor.py  stream_downalder.py  stream_downloader.py  stream_recorder.py  upload_to_gcs.py  video_cut.py  video_processor.py  video_saw.py  video_stream_processor.py  video_stream_processor_mdf.py
