[tool.poetry]
name = "school-project"
version = "0.1.0"
description = ""
authors = ["blahakrystof <blahakrystof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
av = "^13.1.0"
opencv-python-headless = "^4.10.0.84"
asyncio = "^3.4.3"
llvmlite = "^0.43.0"
librosa = "^0.10.2.post1"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
