[tool.poetry]
name = "school-project"
version = "0.1.0"
description = ""
authors = ["blahakrystof <blahakrystof@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
av = "^13.1.0"
opencv-python-headless = "^4.10.0.84"
numpy = "2.0.0"
pymongo = "^4.11.3"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
